<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0E1"
    tools:context=".UserModule.UserProfileFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/my_profile"
        android:textColor="#ffae43"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/icon_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="307dp"
        android:layout_height="227dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/orangeboxuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="198dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="#ffae43"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/years_old"
        android:textAlignment="center"
        android:textColor="#ffae43"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/UserHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_height"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/UserWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_weight"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserHeight"
        app:layout_constraintTop_toBottomOf="@+id/UserHeight" />

    <TextView
        android:id="@+id/userGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_gender"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserHeight"
        app:layout_constraintTop_toBottomOf="@+id/UserWeight" />

    <TextView
        android:id="@+id/userBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_birth"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserHeight"
        app:layout_constraintTop_toBottomOf="@+id/userGender" />

    <Button
        android:id="@+id/BtnEdit"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:backgroundTint="#ffae43"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/UserHeightLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/height"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/UserHeight"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/UserWeightLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserHeightLeft"
        app:layout_constraintTop_toBottomOf="@+id/UserHeightLeft" />

    <TextView
        android:id="@+id/UserGenderLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/genderL"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserWeightLeft"
        app:layout_constraintTop_toBottomOf="@+id/UserWeightLeft" />

    <TextView
        android:id="@+id/UserYearLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/year_of_birth"
        android:textAlignment="center"
        android:textColor="#FFF0E1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/UserGenderLeft"
        app:layout_constraintTop_toBottomOf="@+id/UserGenderLeft" />


</androidx.constraintlayout.widget.ConstraintLayout>