<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0E1"
    tools:context=".UserModule.LanguageFragment">

    <!-- Header TextView -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/language"
        android:textColor="#ffae43"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RadioGroup for Language Options -->

    <!-- Change Button -->
    <RadioGroup
        android:id="@+id/radioGroup_language"
        android:layout_width="265dp"
        android:layout_height="210dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1">

        <RadioButton
            android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/default_language"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/chinese"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_malay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/malay"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/hindi"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFAE43"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/change_language"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_language" />

</androidx.constraintlayout.widget.ConstraintLayout>
