<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff0e1"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:text="@string/close"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvGoalMessage"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/achieved_goal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvGoalAchieved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/congrats"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>
