<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#FDA341"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvExerciseType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exercise_type"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAttribute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attributes"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
